--- a/vozaci.html
+++ b/vozaci.html
@@ -37,7 +37,9 @@
                     <div>Osiguranja</div>
                 </div>
             </div>
-            <!-- <div id="content">
+            <div id="content">
+                
+                <div id="tableWrapper">
                 <table id="driverTable">
                     <thead>
                     <tr id="driverTableHead">
@@ -46,12 +48,14 @@
                         <th>Prezime</th>
                         <th>JMBG</th>
                         <th>Broj radne knjižice</th>
+                        <th>Uredi</th>
                     </tr>
                 </thead>
                 <tbody id="driverTableBody">
                 </tbody>
                 </table>
-            </div> -->
+            </div>
+            </div>
         </div>
 
     <script src="./scripts/script.js"></script>
