Dodat modalni prozor za prikazi detalje, ispisani podaci o vozacu u modalnom prozoru.

--- a/vozaci.html
+++ b/vozaci.html
@@ -83,7 +83,7 @@
     </div>
     <div id="modalDelete">
         <div id="modalWrapper">
-            <div id="modalWrapperTop">
+            <div class="modalWrapperTop">
                 <span>Obriši vozača?</span>
                 <img src="./img/Beli X.svg" id="zatvoriModalniDetaljnije">
             </div>
@@ -94,6 +94,47 @@
                     <button id="btnDeleteDriver">Da</button>
                     <button id="btnCancelDeleteDriver">Odustani od brisanja</button>
                 </div>
+            </div>
+        </div>
+    </div>
+
+    <div id="modalMoreInfo">
+        <div id="modalWrapperInfo">
+            <div class="modalWrapperTop">
+                <span>Detaljnije / izmeni podatke</span>
+                <img src="./img/Beli X.svg" id="closeModalMoreInfo">
+            </div>
+            <div id="modalMoreInfoWrapperContent">
+                <!-- <div id="modalMoreInfoDriverDetails">
+                    <div id="modalMoreInfoDriverPicture">
+                        <img src="./img/account_circle-black-18dp.svg">
+                        <button>Ubaci/promeni sliku vozača</button>
+                    </div>
+                    <div id="modalMoreInfoDriverData">
+                        <label>Ime:</label>
+                        <input type="text">
+
+                        <label>Prezime:</label>
+                        <input type="text">
+
+                        <label>Datum rodjenja:</label>
+                        <input type="text">
+                        
+                        <label>JMBG:</label>
+                        <input type="text">
+
+                        <label>Broj radne knjižice:</label>
+                        <input type="text">
+
+                        <label>Adresa:</label>
+                        <input type="text">
+                    </div>
+                </div> -->
+
+                <!-- <div id="modalMoreInfoButtons">
+                    <button id="btnModalInfoSaveChanges">Sačuvaj promene</button>
+                    <button id="btnCancelModalInfo">Odustani</button>
+                </div> -->
             </div>
         </div>
     </div>
