Zavrsen modalni prozor delete

--- a/vozaci.html
+++ b/vozaci.html
@@ -64,7 +64,6 @@
                     <table id="driverTable">
                         <thead>
                             <tr id="driverTableHead">
-                                <th>ID</th>
                                 <th>Ime</th>
                                 <th>Prezime</th>
                                 <th>JMBG</th>
@@ -88,12 +87,12 @@
                 <img src="./img/Beli X.svg" id="zatvoriModalniDetaljnije">
             </div>
             <div id="modalDeleteWrapperContent">
-                <div>Da li ste sigurni da želite da obrišete vozača: </div>
+                <!-- <div>Da li ste sigurni da želite da obrišete vozača: </div>
 
                 <div id="modalDeleteButtons">
                     <button id="btnDeleteDriver">Da</button>
                     <button id="btnCancelDeleteDriver">Odustani od brisanja</button>
-                </div>
+                </div> -->
             </div>
         </div>
     </div>
