--- a/driver.html
+++ b/driver.html
@@ -17,26 +17,36 @@
         </div>
         <div id="contentWrapper">
             <div id="sideBar">
-                <div class="sideBarItem">
-                    <div class="sideBarImg"><img src="./img/home-white-18dp.svg"></div>
-                    <div>Početna</div>
-                </div>
-                <div class="sideBarItem sideBarSelected">
-                    <div class="sideBarImg"><img src="./img/account_circle-white-18dp.svg"></div>
-                    <div>Vozači</div>
-                </div>
-                <div class="sideBarItem">
-                    <div class="sideBarImg"><img src="./img/local_shipping-white-18dp.svg"></div>
-                    <div>Kamioni</div>
-                </div>
-                <div class="sideBarItem">
-                    <div class="sideBarImg"><img src="./img/alt_route-white-18dp.svg"></div>
-                    <div>Ture</div>
-                </div>
-                <div class="sideBarItem">
-                    <div class="sideBarImg"><img src="./img/account_balance-white-18dp.svg"></div>
-                    <div>Osiguranja</div>
-                </div>
+                <a href="index.html" class="navLink">
+                    <div class="sideBarItem">
+                        <div class="sideBarImg"><img src="./img/home-white-18dp.svg"></div>
+                        <div>Početna</div>
+                    </div>
+                </a>
+                <a href="#" class="navLink">
+                    <div class="sideBarItem sideBarSelected">
+                        <div class="sideBarImg"><img src="./img/account_circle-white-18dp.svg"></div>
+                        <div>Vozači</div>
+                    </div>
+                </a>
+                <a href="trucks.html" class="navLink">
+                    <div class="sideBarItem">
+                        <div class="sideBarImg"><img src="./img/local_shipping-white-18dp.svg"></div>
+                        <div>Kamioni</div>
+                    </div>
+                </a>
+                <a href="trip.html" class="navLink">
+                    <div class="sideBarItem">
+                        <div class="sideBarImg"><img src="./img/alt_route-white-18dp.svg"></div>
+                        <div>Ture</div>
+                    </div>
+                </a>
+                <a href="insurance.html" class="navLink">
+                    <div class="sideBarItem">
+                        <div class="sideBarImg"><img src="./img/account_balance-white-18dp.svg"></div>
+                        <div>Osiguranja</div>
+                    </div>
+                </a>
             </div>
             <div id="content">
                 <div class="tableInputFields">
@@ -80,8 +90,6 @@
                 </div>
             </div>
         </div>
-
-
     </div>
     <div id="modalDelete">
         <div id="modalWrapper">
