Method that creates new user adde.

--- a/driver.html
+++ b/driver.html
@@ -127,26 +127,26 @@
                     </div>
                     <div id="modalMoreInfoDriverData">
                         <label>Ime:</label>
-                        <input type="text">
+                        <input type="text" id="newDriverName">
 
                         <label>Prezime:</label>
-                        <input type="text">
+                        <input type="text" id="newDriverLastName">
 
                         <label>Datum rodjenja:</label>
-                        <input type="text">
+                        <input type="text" id="newDriverDOB">
 
                         <label>JMBG:</label>
-                        <input type="text">
+                        <input type="text" id="newDriverUMCN">
 
                         <label>Broj radne knjižice:</label>
-                        <input type="text">
+                        <input type="text" id="newDriverwoorkNumber">
 
                         <label>Adresa:</label>
-                        <input type="text">
+                        <input type="text" id="newDriverAddres">
                     </div>
                 </div>
                 <div id="modalAddDriverButtons">
-                    <button>Dodaj vozača</button>
+                    <button id="btnModalAddNewDriverToDB">Dodaj vozača</button>
                     <button id="btnModalCancelAddDriver">Odustani</button>
                 </div>
             </div>
