Code formating, blank spaces removed.

--- a/driver.html
+++ b/driver.html
@@ -54,19 +54,23 @@
 
                     <span>Odaberi kriterijum za pretragu:</span>
                     <div class="radioLabelDriver">
-                        <input type="radio" id="searchDriverByName" name="driver" value="searchDriverByName" checked class="rbSearch">
+                        <input type="radio" id="searchDriverByName" name="driver" value="searchDriverByName" checked
+                            class="rbSearch">
                         <label for="searchDriverByName">po imenu</label>
                     </div>
                     <div class="radioLabelDriver">
-                        <input type="radio" id="searchDriverByLastName" name="driver" value="searchDriverByLastName" class="rbSearch">
+                        <input type="radio" id="searchDriverByLastName" name="driver" value="searchDriverByLastName"
+                            class="rbSearch">
                         <label for="searchDriverByLastName">po prezimenu</label>
                     </div>
                     <div class="radioLabelDriver">
-                        <input type="radio" id="searchDriverByUMCD" name="driver" value="searchDriverByUMCD" class="rbSearch">
+                        <input type="radio" id="searchDriverByUMCD" name="driver" value="searchDriverByUMCD"
+                            class="rbSearch">
                         <label for="searchDriverByUMCD">po JMBG-u</label>
                     </div>
                     <div class="radioLabelDriver">
-                        <input type="radio" id="searchDriverByWN" name="driver" value="searchDriverByWN" class="rbSearch">
+                        <input type="radio" id="searchDriverByWN" name="driver" value="searchDriverByWN"
+                            class="rbSearch">
                         <label for="searchDriverByWN">po br. radne knjižice</label>
                     </div>
                 </div>
