Truck page and basic functions on truck page.

--- a/driver.html
+++ b/driver.html
@@ -48,7 +48,7 @@
                     </div>
                 </a>
             </div>
-            <div id="content">
+            <div class="content">
                 <div class="tableInputFields">
                     <input type="text" placeholder="Unesite pojam za pretragu" id="searchDriver">
 
