--- a/trucks.html
+++ b/trucks.html
@@ -47,8 +47,68 @@
                     </div>
                 </a>
             </div>
+            <div class="content">
+                <div class="tableInputFields">
+                    <input type="text" placeholder="Unesite pojam za pretragu" id="searchTrucks">
+
+                    <span>Odaberi kriterijum za pretragu:</span>
+                    <div class="radioLabelDriver">
+                        <input type="radio" id="searchTrucksByREG" name="trucks" value="searchTrucksByREG" checked
+                            class="rbSearch">
+                        <label for="searchTrucksByREG">po registarskom broju</label>
+                    </div>
+                    <div class="radioLabelDriver">
+                        <input type="radio" id="searchTrucksByVIN" name="trucks" value="searchTrucksByVIN"
+                            class="rbSearch">
+                        <label for="searchTrucksByVIN">po broju šasije</label>
+                    </div>
+                </div>
+                <div id="tableWrapper">
+                    <table id="driverTable">
+                        <thead>
+                            <tr id="driverTableHead">
+                                <th>Registarski broj</th>
+                                <th>Broj šasije</th>
+                                <th>Proizvodjač</th>
+                                <th>Model</th>
+                                <th>Uredi</th>
+                            </tr>
+                        </thead>
+                        <tbody id="driverTableBody">
+                        </tbody>
+                    </table>
+                </div>
+                <div id="addDriverBTN">
+                    <button id="btnAddNewDriver">Dodaj novi kamion</button>
+                </div>
+            </div>
         </div>
     </div>
+
+    <div id="modalDelete">
+        <div id="modalWrapper" class="modalDeleteTrucks">
+            <div class="modalWrapperTop">
+                <span>Obriši kamion?</span>
+                <img src="./img/Beli X.svg" id="zatvoriModalniDetaljnije">
+            </div>
+            <div id="modalDeleteWrapperContent">
+            </div>
+        </div>
+    </div>
+
+    <div id="modalMoreInfo">
+        <div id="modalWrapperInfo">
+            <div class="modalWrapperTop">
+                <span>Detaljnije / izmeni podatke</span>
+                <img src="./img/Beli X.svg" id="closeModalMoreInfo">
+            </div>
+            <div id="modalMoreInfoWrapperContent">
+            </div>
+        </div>
+    </div>
+
+
+    <script src="./scripts/trucks.js"></script>
 </body>
 
 </html>
