Loading data from db for trucks nad showing modal more info and delete truck. Fixed search bar.

--- a/trucks.html
+++ b/trucks.html
@@ -70,7 +70,7 @@
                                 <th>Registarski broj</th>
                                 <th>Broj šasije</th>
                                 <th>Proizvodjač</th>
-                                <th>Model</th>
+                                <th>Datum registracije</th>
                                 <th>Uredi</th>
                             </tr>
                         </thead>
