Deleted consol log in different js files, edited html link to tour, added basic funcionality to tour.html - basic data display, wating for id in json respons so i can make modal windows.

--- a/driver.html
+++ b/driver.html
@@ -35,7 +35,7 @@
                         <div>Kamioni</div>
                     </div>
                 </a>
-                <a href="trip.html" class="navLink">
+                <a href="tour.html" class="navLink">
                     <div class="sideBarItem">
                         <div class="sideBarImg"><img src="./img/alt_route-white-18dp.svg"></div>
                         <div>Ture</div>
