Made changes in html, added fields in tabel that customer requested, finising up add tour logic, finished data displaying in new tour for driver and truck.

--- a/driver.html
+++ b/driver.html
@@ -81,7 +81,9 @@
                                 <th>Ime</th>
                                 <th>Prezime</th>
                                 <th>JMBG</th>
-                                <th>Broj radne knjižice</th>
+                                <th>Broj pasoša</th>
+                                <th>Broj lične karte</th>
+                                <th>Ugovor o radu</th>
                                 <th>Uredi</th>
                             </tr>
                         </thead>
