--- a/tour.html
+++ b/tour.html
@@ -99,20 +99,16 @@
                         <div class="modalTourSpecificData">
                             <div class="modalTourSpecificDataLabelInputWrapper">
                                 <label>Vozač:</label>
-                                <select>
-                                    <option value="volvo">Marko Markovic</option>
-                                    <option value="saab">Saab</option>
-                                    <option value="fiat">Fiat</option>
-                                    <option value="audi">Audi</option>
+                                <select id="newTourDriverNameDD">
                                 </select>
                             </div>
                             <div class="modalTourSpecificDataLabelInputWrapper">
                                 <label>JMBG:</label>
-                                <input type="text" value="1234567895423" readonly disabled>
+                                <input type="text" id="newTourDriverUMCN" readonly disabled>
                             </div>
                             <div class="modalTourSpecificDataLabelInputWrapper">
                                 <label>Broj pasoša:</label>
-                                <input type="text" value="SRB1234567895423" readonly disabled>
+                                <input type="text" id="newTourDriverPassport" readonly disabled>
                             </div>
                         </div>
                     </div>
@@ -121,27 +117,24 @@
                         <div class="modalTourSpecificData">
                             <div class="modalTourSpecificDataLabelInputWrapper">
                                 <label>Registarske oznake:</label>
-                                <select>
-                                    <option value="saab">NS-123-FG</option>
-                                    <option value="fiat">Fiat</option>
-                                    <option value="audi">Audi</option>
+                                <select id="newTourTruckRegistrationNumberDD">
                                 </select>
                             </div>
                             <div class="modalTourSpecificDataLabelInputWrapper">
                                 <label>Datum registracije:</label>
-                                <input type="text" value="22.11.2020." readonly disabled>
+                                <input type="text" id="newTourTruckRegistrationDate" readonly disabled>
                             </div>
                             <div class="modalTourSpecificDataLabelInputWrapper">
                                 <label>Broj šasije:</label>
-                                <input type="text" value="548asdfasdf12" readonly disabled>
+                                <input type="text" id="newTourTruckVIN" readonly disabled>
                             </div>
                             <div class="modalTourSpecificDataLabelInputWrapper">
                                 <label>Proizvođač:</label>
-                                <input type="text" value="Man" readonly disabled>
+                                <input type="text" id="newTourTruckManufacturer" readonly disabled>
                             </div>
                             <div class="modalTourSpecificDataLabelInputWrapper">
                                 <label>Model:</label>
-                                <input type="text" value="Traveler" readonly disabled>
+                                <input type="text" id="newTourTruckModel" readonly disabled>
                             </div>
                         </div>
                     </div>
