--- a/trucks.html
+++ b/trucks.html
@@ -71,6 +71,7 @@
                                 <th>Broj šasije</th>
                                 <th>Proizvodjač</th>
                                 <th>Datum registracije</th>
+                                <th>Tahograf</th>
                                 <th>Uredi</th>
                             </tr>
                         </thead>
