Added modal delete tour, mising functionality delete tour from db no endpoint.

--- a/tour.html
+++ b/tour.html
@@ -85,6 +85,16 @@
             </div>
         </div>
     </div>
+    <div id="modalDelete">
+        <div id="modalWrapper" class="modalDeleteTour">
+            <div class="modalWrapperTop">
+                <span>Obriši turu?</span>
+                <img src="./img/Beli X.svg" id="zatvoriModalniDetaljnije">
+            </div>
+            <div id="modalDeleteWrapperContent">
+            </div>
+        </div>
+    </div>
 
     <div id="modalAddTour">
         <div id="modalWrapperAdd">
